# retico-wozmic

./: README.md  pyproject.toml
docs/: conf.py  index.rst  retico_wozmic.rst
src/retico_wozmic/: WOZ_microphone.py  WOZ_microphone_2.py  WOZ_microphone_3.py  __init__.py  main.py
src/tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py
