[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-wozmic"
authors = [{ name = "Marius Le Chapelier", email = "mariuslechapelier@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.11.7"
dependencies = [
    "keyboard",
    "scipy",
    "retico-core @ git+https://github.com/articulab/retico-core.git",
]